# netwatch-cloud

./: .gitignore  AGENT_BEFORE_AFTER_COMPARISON.md  AGENT_CHANGES_VERIFICATION.md  AGENT_DELIVERY_SUMMARY.txt  AGENT_UPDATE_COMPLETE.txt  AGENT_v0.2.0_COMPATIBILITY.md  AGENT_v0.2.0_FILES_CHANGED.txt  AGENT_v0.2.0_INDEX.md  AGENT_v0.2.0_README.md  AGENT_v0.2.0_RELEASE_CHECKLIST.md  AGENT_v0.2.0_SUMMARY.md  Cargo.toml  Dockerfile.agent  README.md  ROADMAP.md  Roadmap-Adjusted.md  Roadmap-Original.md  SPEC-Cloud.md  agent.sh  docker-compose.yml  install.sh
netwatch-agent/: Cargo.toml  build.rs  netwatch-agent.service
netwatch-agent/src/: collector.rs  config.rs  host.rs  main.rs  sender.rs  update.rs
netwatch-cloud/: .env.example  207_MULTISTATUS_IMPLEMENTATION.md  CHANGES.md  COMPREHENSIVE_SECURITY_COMPLETION.md  Cargo.toml  Dockerfile  FINAL_REVIEW_ISSUES.md  INDEX.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION.md  PHASE2_SUMMARY.txt  README.md  REFRESH_TOKEN_IMPLEMENTATION.md  REFRESH_TOKEN_QUICK_START.md  RELEASE_CHECKLIST.md  RELEASE_QUICKSTART.md  RELEASE_WORKFLOW.md  RELEASE_v0.1.1.md  RELEASE_v0.1.1_CHECKLIST.md  RELEASE_v0.2.0.md  RETENTION_LIMITS_IMPLEMENTATION.md  RETENTION_QUICK_REFERENCE.md  SECURITY_AUDIT.md  SECURITY_FIXES_HIGH_PRIORITY.md  SECURITY_FIXES_MEDIUM_16_20.md  SECURITY_FIXES_SUMMARY.md  SPEC.md  SPEC_VS_ROADMAP.md  build.rs  install.sh
netwatch-cloud/migrations/: 20260324000000_initial.sql  20260325000000_system_metrics.sql  20260326000000_disk_swap_tcp_metrics.sql  20260327000000_cpu_per_core.sql  20260331000000_stripe_billing.sql  (+6 more)
(+48 files in other folders)
