[package]
name = "netwatch-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
netwatch-core = { path = "../crates/netwatch-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.17"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
chrono = "0.4"

# Force rebuild: stripe billing integration 2026-03-31
